float precision problem ?

--- a/exp_rapide/Makefile
+++ b/exp_rapide/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS3 = -g -Wall -O3 
 
-prog: main.o
-	$(CC) $(CFLAGS3) -o prog main.o
+prog: main.o exp_rapide.o
+	$(CC) $(CFLAGS3) -o prog main.o exp_rapide.o
 
 main.o: main.c exp_rapide.h
 	$(CC) $(CFLAGS3) -c -o $@ $<
