unit test ok with r = 1.0e-13

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,18 +13,18 @@ add_executable(algo_test test.cpp)
 #flags
 set(CMAKE_CXX_FLAGS "-fvisibility=hidden")
 
-#指定要访问的子目录
+# add the library
 add_subdirectory(algo_lib)
 
-#mylib要包含的库.h路径
+#mylib sould include path to .h
 target_include_directories(al PUBLIC algo_lib)
 
-#prog依赖mylib
+#prog depends on mylib
 target_link_libraries (algo al)
 target_link_libraries (algo_test GTest::GTest GTest::Main al)
 
 
-#ctest : cmake 自带的test
+#ctest from cmake
 enable_testing()
 find_package(GTest REQUIRED)
 
