--- a/exp_rapide/Makefile
+++ b/exp_rapide/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS3 = -g -Wall -O3 
 
-prog: main.o exp_rapide.o
-	$(CC) $(CFLAGS3) -o prog main.o exp_rapide.o
+rapid_error: main.o exp_rapide.o
+	$(CC) $(CFLAGS3) -o rapid_error main.o exp_rapide.o
 
 main.o: main.c exp_rapide.h
 	$(CC) $(CFLAGS3) -c -o $@ $<
@@ -11,6 +11,6 @@ exp_rapide.o: exp_rapide.c exp_rapide.h
 	$(CC) $(CFLAGS3) -c -o $@ $<
 
 clean:
-	rm -f *.o prog
+	rm -f *.o rapid_error
 
 .PHONY: clean
