rapid double error rec and iter done, compared with double values from python

--- a/exp_rapide/Makefile
+++ b/exp_rapide/Makefile
@@ -10,7 +10,13 @@ main.o: main.c exp_rapide.h
 exp_rapide.o: exp_rapide.c exp_rapide.h
 	$(CC) $(CFLAGS3) -c -o $@ $<
 
+error: error.o
+	$(CC) $(CFLAGS3) -o error error.o
+
+error.o: error.c
+	$(CC) $(CFLAGS3) -c -o $@ $<
+
 clean:
-	rm -f *.o rapid_error
+	rm -f *.o rapid_error error
 
 .PHONY: clean
