rapid UR x = 1.11 n = 0 to 6801

--- a/exp_rapide/Makefile
+++ b/exp_rapide/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS3 = -g -Wall -O3 
 
-rapid_error: main.o exp_rapide.o
-	$(CC) $(CFLAGS3) -o rapid_error main.o exp_rapide.o
+rapid: main.o exp_rapide.o
+	$(CC) $(CFLAGS3) -o rapid main.o exp_rapide.o
 
 main.o: main.c exp_rapide.h
 	$(CC) $(CFLAGS3) -c -o $@ $<
@@ -17,6 +17,6 @@ error.o: error.c
 	$(CC) $(CFLAGS3) -c -o $@ $<
 
 clean:
-	rm -f *.o rapid_error error
+	rm -f *.o rapid error
 
 .PHONY: clean
