add mean values and error bars

--- a/exp_rapide/Makefile
+++ b/exp_rapide/Makefile
@@ -21,7 +21,14 @@ err_py: err_py.o
 
 err_py.o: err_py.c
 	$(CC) $(CFLAGS3) -c -o $@ $<
+
+stat: stat.o
+	$(CC) $(CFLAGS3) -o stat stat.o
+
+stat.o: stat.c
+	$(CC) $(CFLAGS3) -c -o $@ $<
+
 clean:
-	rm -f *.o rapid error err_py
+	rm -f *.o rapid error err_py stat
 
 .PHONY: clean
