--- a/exp_rapide/Makefile
+++ b/exp_rapide/Makefile
@@ -10,10 +10,10 @@ main.o: main.c exp_rapide.h
 exp_rapide.o: exp_rapide.c exp_rapide.h
 	$(CC) $(CFLAGS3) -c -o $@ $<
 
-error: error.o
-	$(CC) $(CFLAGS3) -o error error.o
+err_c: err_c.o
+	$(CC) $(CFLAGS3) -o err_c err_c.o
 
-error.o: error.c
+err_c.o: err_c.c
 	$(CC) $(CFLAGS3) -c -o $@ $<
 
 err_py: err_py.o
@@ -29,6 +29,6 @@ stat.o: stat.c
 	$(CC) $(CFLAGS3) -c -o $@ $<
 
 clean:
-	rm -f *.o rapid error err_py stat
+	rm -f *.o rapid err_c err_py stat
 
 .PHONY: clean
