--- a/exponentiation_etudes_mantisse/Makefile
+++ b/exponentiation_etudes_mantisse/Makefile
@@ -4,25 +4,25 @@ DOCKER = docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
 all: SR_main UR_main ref_main erreur stat
 
-erreur: erreur.o
-	$(DOCKER) verificarlo-c -o $@ $^
 stat: stat.o
 	$(DOCKER) verificarlo-c -o $@ $^
-	
-ref_main: ref_main.o algo.o reference.o
-	$(DOCKER) verificarlo-c -o $@ $^
-	
-UR_main: UR_main.o algo.o
-	$(DOCKER) verificarlo-c -o $@ $^
 
-SR_main: SR_main.o algo.o
-	$(DOCKER) verificarlo-c -o $@ $^
+erreur: erreur.o
+	$(DOCKER) $(CC) -o $@ $^
+	
+ref_main: ref_main.o reference.o
+	$(DOCKER) $(CC) -o $@ $^
+	
+UR_main: UR_main.o experience.o
+	$(DOCKER) $(CC) -o $@ $^
+
+SR_main: SR_main.o experience.o
+	$(DOCKER) $(CC) -o $@ $^
 
 stat.o: stat.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 erreur.o: erreur.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-	
 UR_main.o: UR_main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 SR_main.o: SR_main.c algo.h
@@ -31,9 +31,8 @@ ref_main.o: ref_main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 reference.o: reference.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-
-algo.o: algo.c algo.h
-	$(DOCKER) verificarlo-c -g -Wall -O0 -c -o $@ $<
+experience.o: experience.c algo.h
+	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
 clean:
 	rm -f *.o
