--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "files.associations": {
-        "__locale": "c",
-        "chrono": "c",
-        "functional": "c"
-    }
+  "files.associations": {
+    "__locale": "c",
+    "chrono": "c",
+    "functional": "c"
+  },
+  "C_Cpp_Runner.msvcBatchPath": ""
 }
