--- a/inner_product/Makefile
+++ b/inner_product/Makefile
@@ -2,48 +2,55 @@ CC = verificarlo-c
 CFLAGS3 = -g -Wall -O0
 DOCKER = docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
-all: vec_gen ref_main sr_main ur_main ur_err sr_err stat
+all: vec_gen ref_main  ur_main ur_err sr_main sr_err stat
 
 vec_gen: vec_gen.o
 	$(DOCKER) $(CC) -o $@ $^
 vec_gen.o: vec_gen.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
+
 ref_main: ref_main.o ref.o
 	$(DOCKER) $(CC) -o $@ $^
 ref_main.o: ref_main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
+ref.o: ref.c algo.h
+	$(DOCKER) $(CC) $(CFLAGS3) -c $<
+
 
 ur_main: ur_main.o prod.o
 	$(DOCKER) $(CC) -o $@ $^
 ur_main.o: ur_main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
+
 sr_main: sr_main.o prod.o
 	$(DOCKER) $(CC) -o $@ $^
 sr_main.o: sr_main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
+
+
+prod.o: prod.c algo.h
+	$(DOCKER) $(CC) $(CFLAGS3) -c $<
+
 
 ur_err: ur_err.o
 	$(DOCKER) $(CC) -o $@ $^
 ur_err.o: ur_err.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
+
 sr_err: sr_err.o
 	$(DOCKER) $(CC) -o $@ $^
 sr_err.o: sr_err.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
+
 
 stat: stat.o
 	$(DOCKER) $(CC) -o $@ $^
 stat.o: stat.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
-prod.o: prod.c algo.h
-	$(DOCKER) $(CC) -o $@ $<
-
-ref.o: ref.c algo.h
-	$(DOCKER) $(CC) -o $@ $<
 
 clean:
 	rm -Rf *.o vec_gen ref_main sr_main ur_main ur_err sr_err stat
