Comparaison of sum exec time w SR vs NR
-changes need to be made

--- a/multiplication/Makefile
+++ b/multiplication/Makefile
@@ -2,11 +2,15 @@ CC = verificarlo-c
 CFLAGS3 = -g -Wall -O0
 DOCKER = sudo docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
-all: main
+all: main performance
 
 main: main.o reference.o algo.o
+	$(DOCKER) $(CC) -o $@ $^
+performance: performance.o reference.o algo.o
 	$(DOCKER) $(CC) -o $@ $^	
 
+performance.o: performance.c algo.h
+	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 main.o: main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 algo.o: algo.c algo.h
@@ -16,6 +20,6 @@ reference.o: reference.c algo.h
 
 
 clean:
-	rm -f *.o main
+	rm -f *.o main performance
 
 .PHONY: clean
