--- a/exponentiation_etudes_mantisse/Makefile
+++ b/exponentiation_etudes_mantisse/Makefile
@@ -2,11 +2,14 @@ CC = verificarlo-c
 CFLAGS3 = -g -Wall -O0
 DOCKER = docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
-all: SR_main UR_main ref_main erreur stat
+all: SR_main UR_main ref_main erreur stat stat_sign_bit
+
+stat_sign_bit: stat_sign_bit.o
+	$(DOCKER) verificarlo-c -o $@ $^ -lm
 
 stat: stat.o
 	$(DOCKER) verificarlo-c -o $@ $^
-
+	
 erreur: erreur.o
 	$(DOCKER) $(CC) -o $@ $^
 	
@@ -19,6 +22,8 @@ UR_main: UR_main.o experience.o
 SR_main: SR_main.o experience.o
 	$(DOCKER) $(CC) -o $@ $^
 
+stat_sign_bit.o: stat_sign_bit.c
+	$(DOCKER) $(CC) $(CFLAGS3) -c $< -lm
 stat.o: stat.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 erreur.o: erreur.c
