--- a/exponentiation/Makefile
+++ b/exponentiation/Makefile
@@ -1,16 +1,17 @@
-CC = verificarlo-c
+CC = clang-7
+CC_VERIFICARLO = verificarlo-c
 CFLAGS3 = -g -Wall -O0
 DOCKER = sudo docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
 all: main
 
 main: main.o reference.o algo.o
-	$(DOCKER) $(CC) -o $@ $^	
+	$(DOCKER) $(CC_VERIFICARLO) -o $@ $^
 
 main.o: main.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 algo.o: algo.c algo.h
-	$(DOCKER) $(CC) $(CFLAGS3) -c $<
+	$(DOCKER) $(CC_VERIFICARLO) $(CFLAGS3) -c $<
 reference.o: reference.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
