--- a/exponentiation_etudes_mantisse/Makefile
+++ b/exponentiation_etudes_mantisse/Makefile
@@ -2,10 +2,13 @@ CC = verificarlo-c
 CFLAGS3 = -g -Wall -O0
 DOCKER = docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
-all: SR_main UR_main ref_main erreur stat stat_sign_bit
+all: SR_main UR_main ref_main erreur stat stat_sign_bit stat_distribution
 
 stat_sign_bit: stat_sign_bit.o
 	$(DOCKER) verificarlo-c -o $@ $^ -lm
+	
+stat_distribution: stat_distribution.o
+	$(DOCKER) verificarlo-c -o $@ $^
 
 stat: stat.o
 	$(DOCKER) verificarlo-c -o $@ $^
@@ -24,6 +27,8 @@ SR_main: SR_main.o experience.o
 
 stat_sign_bit.o: stat_sign_bit.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $< -lm
+stat_distribution.o: stat_distribution.c
+	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 stat.o: stat.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 erreur.o: erreur.c
