--- a/multiplication/Makefile
+++ b/multiplication/Makefile
@@ -3,11 +3,9 @@ CC_VERIFICARLO = verificarlo-c
 CFLAGS3 = -g -Wall -O0
 DOCKER = sudo docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 
-all: main performance
+all: main
 
 main: main.o reference.o algo.o
-	$(DOCKER) $(CC_VERIFICARLO) -o $@ $^
-performance: performance.o reference.o algo.o
 	$(DOCKER) $(CC_VERIFICARLO) -o $@ $^
 
 main.o: main.c algo.h
@@ -16,11 +14,9 @@ algo.o: algo.c algo.h
 	$(DOCKER) $(CC_VERIFICARLO) $(CFLAGS3) -c $<
 reference.o: reference.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-performance.o: performance.c algo.h
-	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
 
 clean:
-	rm -f *.o main performance
+	rm -f *.o main
 
 .PHONY: clean
