--- a/sum_prod/Makefile
+++ b/sum_prod/Makefile
@@ -5,7 +5,7 @@ CFLAGS2 = -g -Wall -O2
 DOCKER = docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 LKFLAGS = -lm
 
-all: vec_gen ref_main ur_main ur_err sr_main sr_err stat
+all: vec_gen main stat
 
 vec_gen: vec_gen.o
 	$(DOCKER) $(CC) -o $@ $^
@@ -13,41 +13,14 @@ vec_gen.o: vec_gen.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
 
-ref_main: ref_main.o ref.o
-	$(DOCKER) $(CC) -o $@ $^
-ref_main.o: ref_main.c algo.h
-	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-ref.o: ref.c algo.h
-	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-
-
-ur_main: ur_main.o calcul.o
-	$(DOCKER) $(CC) -o $@ $^
-ur_main.o: ur_main.c algo.h
-	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-
-
-sr_main: sr_main.o calcul.o
+main: main.o ref.o calcul.o 
 	$(DOCKER) $(CC_VERIFICARLO) -o $@ $^
-sr_main.o: sr_main.c algo.h
-	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-
-
+main.o: main.c algo.h
+	$(DOCKER) $(CC) -c $<
 calcul.o: calcul.c algo.h
 	$(DOCKER) $(CC_VERIFICARLO) $(CFLAGS2) -c $<
-
-
-ur_err: ur_err.o
-	$(DOCKER) $(CC) -o $@ $^
-ur_err.o: ur_err.c
+ref.o: ref.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
-
-
-sr_err: sr_err.o
-	$(DOCKER) $(CC_VERIFICARLO) -o $@ $^
-sr_err.o: sr_err.c
-	$(DOCKER) $(CC_VERIFICARLO) $(CFLAGS3) -c $<
-
 
 stat: stat.o
 	$(DOCKER) $(CC) -o $@ $^ $(LKFLAGS)
@@ -56,6 +29,6 @@ stat.o: stat.c
 
 
 clean:
-	rm -Rf *.o vec_gen ref_main sr_main ur_main ur_err sr_err stat
+	rm -Rf *.o vec_gen main stat
 
 .PHONY: clean
