separate ref data but inf appears for UR errors

--- a/sum_prod/Makefile
+++ b/sum_prod/Makefile
@@ -5,7 +5,7 @@ CFLAGS2 = -g -Wall -O2
 DOCKER = docker run -v "$(PWD)":/workdir verificarlo/verificarlo
 LKFLAGS = -lm
 
-all: vec_gen main stat
+all: vec_gen main ref_main stat
 
 vec_gen: vec_gen.o
 	$(DOCKER) $(CC) -o $@ $^
@@ -13,12 +13,17 @@ vec_gen.o: vec_gen.c
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
 
-main: main.o ref.o calcul.o 
+main: main.o calcul.o 
 	$(DOCKER) $(CC_VERIFICARLO) -o $@ $^
 main.o: main.c algo.h
 	$(DOCKER) $(CC) -c $<
 calcul.o: calcul.c algo.h
 	$(DOCKER) $(CC_VERIFICARLO) $(CFLAGS2) -c $<
+
+ref_main: ref_main.o ref.o
+	$(DOCKER) $(CC) -o $@ $^
+ref_main.o: ref_main.c algo.h
+	$(DOCKER) $(CC) -c $<
 ref.o: ref.c algo.h
 	$(DOCKER) $(CC) $(CFLAGS3) -c $<
 
@@ -29,6 +34,6 @@ stat.o: stat.c
 
 
 clean:
-	rm -Rf *.o vec_gen main stat
+	rm -Rf *.o vec_gen main ref_main stat
 
 .PHONY: clean
